--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-polars = { git = "https://github.com/pola-rs/polars", branch = "main", features = [
-    "parquet", "lazy", "is_in", "rank", "abs", "streaming", "cutqcut", "propagate_nans", "dtype-full", "random"] }
+polars = { version = "0.50.0", features = [
+    "parquet", "lazy", "is_in", "rank", "abs", "cutqcut", "propagate_nans", "dtype-full", "random"] }
 
 [profile.release]
 lto = true
 strip = true
 codegen-units = 1
+panic = "abort"
+opt-level = 3
