--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-polars = { version = "0.51.0", features = [
-    "parquet", "lazy", "is_in", "rank", "abs", "cutqcut", "propagate_nans", "dtype-full", "random"] }
+polars = { version = "0.52.0", features = [
+    "parquet",
+    "lazy",
+    "is_in",
+    "rank",
+    "abs",
+    "cutqcut",
+    "propagate_nans",
+    "dtype-full",
+    "random",
+    "timezones",
+] }
 
 [profile.release]
 lto = true
